--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/laohanme/steadyonsocket#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
   }
 }
