--- a/now.json
+++ b/now.json
@@ -1,4 +1,15 @@
 {
     "version": 2,
-    "builds": [{ "src": "index.js", "use": "@now/node-server" }]
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@now/node-server"
+        }
+    ],
+    "routes": [
+        {
+            "src": "./index.html",
+            "dest": "/"
+        }
+    ]
 }
