--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm start"
+    "build": "npm start",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
